fix: Don't squash font into each other in card

--- a/src/fellchensammlung/static/fellchensammlung/css/styles.css
+++ b/src/fellchensammlung/static/fellchensammlung/css/styles.css
@@ -816,6 +816,7 @@ a.btn, a.btn2, a.nav-link {
 
 h2.heading-card-adoption-notice {
     font-size: 2rem;
+    line-height: 2rem;
     word-wrap: anywhere;
     width: 80%;
 }
